corrected alignment of buttons

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ blockquote, q { quotes: "" ""; }
 a img { border: none; }
 /* -------------   Normal CSS  ----------------*/
 
-html {background-image:url(../images/bg.jpg);background-repeat:repeat;}	
+html {background-image:url(../images/bg1.jpg);background-repeat:repeat;}	
 body{width: 960px;margin: 30px auto;padding: 0 30px;position: relative;} 
 
 h1 {height: 100px;width: 240px}
@@ -111,13 +111,13 @@ article h2{font-size:1.5;color:#000;}
  
 /* ---------- Store----------*/
 
-.wrapper{display: block;width: 85%;height: 850px;background-color: #ECECEC;border-style: solid;border-color: black;border-width: medium;padding: 30px;}
+.wrapper{display: block;width: 87.5%;height: 850px;background-color: #ECECEC;border-style: solid;border-color: black;border-width: medium;padding: 30px;}
 .product{display:block;width: 140px;float:left;}
 .product1{display:block;width: 140px;float:left;}
 .product2{display:block;width: 140px;float:left;}
 .product3{display:block;width: 140px;float:left;}
 .product4{display:block;width: 140px;float:left;}
-.product5{display:block;width: 100px;float:left;}
+.product5{display:block;width: 140px;float:left;}
 
 .product p, span {font-size:14px;margin:4px 0;}
 .product1 p, span {font-size:14px;margin:4px 0;}
@@ -127,7 +127,6 @@ article h2{font-size:1.5;color:#000;}
 .product5 p, span {font-size:14px;margin:4px 0;}
 
 form input {margin-bottom:10px;}
-.product5 form input{margin-bottom:-11px;}
 /* -------------  Sections ------------ */
 section {float: left;margin-right:37px;}
 
